--- a/styles.css
+++ b/styles.css
@@ -27,8 +27,8 @@ header {
 }
 
 header h1 {
-    font-size: 1.5rem;
-    font-weight: normal;
+    font-size: 1rem;
+    font-weight: bold;
     color: #333;
     margin-bottom: 5px;
 }
@@ -40,7 +40,7 @@ header h1 {
 
 .section h2 {
     color: #333;
-    font-size: 1.3rem;
+    font-size: 1rem;
     margin-bottom: 15px;
     font-weight: bold;
     border-bottom: 1px solid #ddd;
@@ -69,6 +69,21 @@ header h1 {
     border: 1px solid #ddd;
 }
 
+.profile-link {
+    margin-top: 5px;
+    text-align: center;
+}
+
+.profile-link a {
+    color: #0066cc;
+    text-decoration: none;
+    font-size: 0.9rem;
+}
+
+.profile-link a:hover {
+    text-decoration: underline;
+}
+
 /* Publications styles */
 .publication-list, .awards-list {
     list-style-type: none;
@@ -82,6 +97,15 @@ header h1 {
     display: block;
     font-weight: bold;
     margin-bottom: 3px;
+}
+
+.pub-title a {
+    color: #0066cc;
+    text-decoration: none;
+}
+
+.pub-title a:hover {
+    text-decoration: underline;
 }
 
 .pub-authors, .award-org {
