--- a/styles.css
+++ b/styles.css
@@ -94,9 +94,8 @@ header h1 {
 }
 
 .pub-title {
-    display: block;
+    display: inline;
     font-weight: bold;
-    margin-bottom: 3px;
 }
 
 .pub-title a {
@@ -108,28 +107,21 @@ header h1 {
     text-decoration: underline;
 }
 
-.pub-authors, .pub-journal, .pub-note, .award-org {
-    display: block;
-    margin-bottom: 3px;
+.pub-authors, .pub-journal, .pub-note, .award-title, .award-org {
+    display: inline;
 }
 
-.pub-authors {
-    font-style: normal;
+#publications p, #awards p {
+    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
-.pub-journal {
-    font-style: normal;
-}
-
-.pub-note {
-    font-style: italic;
-    color: #555;
+#publications p:not(:last-child), #awards p:not(:last-child) {
+    border-bottom: 1px solid #eee;
 }
 
 .award-title {
-    display: block;
-    font-weight: bold;
-    margin-bottom: 3px;
+    font-weight: normal;
 }
 
 .award-org {
